2014-09-15 (0.1.3)  Chris Edester
        * compatability with puppet 3.7 and future parser

2014-06-02 (0.1.2)  Chris Edester
        * we are using validations from stdlib, so require it in Modulefile

2014-04-28 (0.1.1)  Chris Edester
        * fixes #1 - Error when same mobileconfig_profile for two users

2014-04-22 (0.1.0)  Chris Edester
        * first stable release