@@ -1,11 +1,0 @@
-name    'edestecd-mobileconfig_profile'
-version '0.1.3'
-source 'https://github.com/edestecd/puppet-mobileconfig_profile.git'
-author 'Chris Edester'
-license 'GPLv3+'
-summary 'Puppet Module for managing OSX Configuration profiles'
-description 'Puppet Module for managing OSX Configuration profiles (both device and user profiles)'
-project_page 'https://github.com/edestecd/puppet-mobileconfig_profile'
-
-## Add dependencies, if any:
-dependency 'puppetlabs/stdlib', '>= 4.1.0'
