@@ -1,3 +1,6 @@
+2014-10-29 (0.1.4)  Chris Edester
+        * puppet lint checks and improved version comparison
+
 2014-09-15 (0.1.3)  Chris Edester
         * compatability with puppet 3.7 and future parser
 
